--- a/src/components/camp-bar/camp-bar.scss
+++ b/src/components/camp-bar/camp-bar.scss
@@ -1,7 +1,7 @@
 // 声明变量的值尽量不要带 '' 例如 @trans: 'transparent'; 因为这样编译后的 css 样式会不生效
 $trans: transparent;
 $f8: #f8f8f8;
-$barHeiht: 24px;
+$barHeight: 24px;
 $barPadding: 8px;
 @mixin setBar($c: $trans, $sc: $trans, $t: 12px, $r: 12px, $b: 12px, $l: 12px) {
   border-radius: $t $r $b $l;
@@ -14,17 +14,17 @@ $barPadding: 8px;
     @if $l!=0 {
       right: 2px;
       border-left: $barPadding solid $sc;
-      border-bottom: $barHeiht solid $f8;
+      border-bottom: $barHeight solid $f8;
     } @else if $r !=0 {
       left: -2px;
       border-right: $barPadding solid $c;
-      border-top: $barHeiht solid $f8;
+      border-top: $barHeight solid $f8;
     }
   }
 }
 .bar-item {
   position: relative;
-  height: $barHeiht;
+  height: $barHeight;
   &.bar-left {
     @include setBar(#ff9247, #ff2927, 12px, 0, 0, 12px);
   }
